--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+env_logger = "0.10.0"
+log = "0.4"
 serialport = "4"
 simconnect-sdk = { path = "../simconnect-sdk-rs/simconnect-sdk", features = ["derive"] }
