--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2021"
 [dependencies]
 env_logger = "0.10.0"
 log = "0.4"
+serde = { version = "1", features = ["derive"] }
 serialport = "4"
 simconnect-sdk = { git = "https://github.com/flightsim-sfg-konstanz/simconnect-sdk-rs.git", branch = "main", features = ["derive"] }
+toml = "0.7"
