--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 env_logger = "0.10.0"
-log = "0.4"
+log = { version = "0.4", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serialport = "4"
 simconnect-sdk = { git = "https://github.com/flightsim-sfg-konstanz/simconnect-sdk-rs.git", branch = "main", features = ["derive"] }
